--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<p class="header-subtitle">Верстка на HTML/CSS<br>
 					Разработка сайтов под ключ</p>
 					<div class="header-button-block">
-						<button class="header-button">Связаться</button>
+						<a href="https://vk.com/prime_br" class="header-button">Связаться</a>
 						<small>*Это бесплатно</small>
 					</div>
 					<!-- /.header-button-block -->
@@ -82,16 +82,16 @@
 				<div class="col-md-4">
 					<div class="social-block">
 						<p>Подпишитесь:</p>
-						<a href="#">
+						<a href="https://www.facebook.com/">
 							<img src="image/buttons/facebook-logo-button.png" alt="Facebook">
 						</a>
-						<a href="#">
+						<a href="https://telegram.org/">
 							<img src="image/buttons/telegram-symbol.png" alt="Telegram">
 						</a>
-						<a href="#">
+						<a href="https://vk.com/login?act=mobile&hash=d1e0e5ee68cf6f10e8ead884eadc">
 							<img src="image/buttons/vk-social-logotype.png" alt="VK">
 						</a>
-						<a href="#">
+						<a href="https://www.youtube.com/">
 							<img src="image/buttons/youtube-symbol.png" alt="YouTube">
 						</a>
 					</div>
@@ -99,7 +99,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Напишите мне:</p>
-						<button class="footer-button">Написать</button>
+						<a href="https://vk.com/prime_br"></a> class="footer-button">Написать</a>
 					</div>
 				</div>
 			</div>
