--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="col-md-4">
 					<div class="footer-cta-block">
 						<p class="footer-cta">Напишите мне:</p>
-						<a href="https://vk.com/prime_br"></a> class="footer-button">Написать</a>
+						<a href="https://vk.com/prime_br" class="footer-button">Написать</a>
 					</div>
 				</div>
 			</div>
